// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders 1`] = `
<div
  className="content"
>
  <div
    className="level"
  >
    <div
      className="level-left"
    >
      <h3
        className="level-item"
      >
        Standard Signature
      </h3>
    </div>
    <div
      className="level-right"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Copy text only
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Copy Signature
      </button>
    </div>
  </div>
  <Signature
    brandLink="https://readify.net"
    brandLinkName="readify.net"
    brandLogo={
      Object {
        "alt": "Readify a Telstra Company",
        "link": "https://readifysignatures.blob.core.windows.net/images/image001.png",
      }
    }
    brandName="Readify"
    email="your.name@readify.net"
    emailHtml={
      <a
        href="mailto:your.name@readify.net"
      >
        your.name@readify.net
      </a>
    }
    isSupport={false}
    mobile="+61 111 222 333"
    mobileHtml={
      <a
        dangerouslySetInnerHTML={
          Object {
            "__html": "+61&nbsp;111&nbsp;222&nbsp;333",
          }
        }
        href="tel:+61111222333"
      />
    }
    name="your name"
    placeholders={
      Object {
        "email": "your.name@readify.net",
        "mobile": "+61 111 222 333",
        "name": "Your Name",
        "qualifications": "Jedi Master | PSM I",
        "title": "Job Title",
        "twitter": "@myTwitter",
      }
    }
    supportEmail={
      <span>
          
      </span>
    }
    supportMobile={
      <span>
          
      </span>
    }
    title="Job Title"
    twitter="@myTwitter"
    twitterHtml={
      <span>
        <b>
          T
        </b>
         
        <a
          href="https://twitter.com/myTwitter"
          rel="noopener noreferrer"
          target="_blank"
        >
          @myTwitter
        </a>
           
      </span>
    }
  />
  <div
    className="level"
  >
    <div
      className="level-left"
    >
      <h3
        className="level-item"
      >
        Replies and Forwards Signature
      </h3>
    </div>
    <div
      className="level-right"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Copy text only
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Copy Signature
      </button>
    </div>
  </div>
  <RepliesAndForwards
    brandLink="https://readify.net"
    brandLinkName="readify.net"
    brandLogo={
      Object {
        "alt": "Readify a Telstra Company",
        "link": "https://readifysignatures.blob.core.windows.net/images/image001.png",
      }
    }
    brandName="Readify"
    email="your.name@readify.net"
    emailHtml={
      <a
        href="mailto:your.name@readify.net"
      >
        your.name@readify.net
      </a>
    }
    isSupport={false}
    mobile="+61 111 222 333"
    mobileHtml={
      <a
        dangerouslySetInnerHTML={
          Object {
            "__html": "+61&nbsp;111&nbsp;222&nbsp;333",
          }
        }
        href="tel:+61111222333"
      />
    }
    name="your name"
    placeholders={
      Object {
        "email": "your.name@readify.net",
        "mobile": "+61 111 222 333",
        "name": "Your Name",
        "qualifications": "Jedi Master | PSM I",
        "title": "Job Title",
        "twitter": "@myTwitter",
      }
    }
    supportEmail={
      <span>
          
      </span>
    }
    supportMobile={
      <span>
          
      </span>
    }
    title="Job Title"
    twitter="@myTwitter"
    twitterHtml={
      <span>
        <b>
          T
        </b>
         
        <a
          href="https://twitter.com/myTwitter"
          rel="noopener noreferrer"
          target="_blank"
        >
          @myTwitter
        </a>
           
      </span>
    }
  />
</div>
`;

exports[`Renders with support fields 1`] = `
<div
  className="content"
>
  <div
    className="level"
  >
    <div
      className="level-left"
    >
      <h3
        className="level-item"
      >
        Standard Signature
      </h3>
    </div>
    <div
      className="level-right"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Copy text only
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Copy Signature
      </button>
    </div>
  </div>
  <Signature
    brandLink="https://readify.net"
    brandLinkName="readify.net"
    brandLogo={
      Object {
        "alt": "Readify a Telstra Company",
        "link": "https://readifysignatures.blob.core.windows.net/images/image001.png",
      }
    }
    brandName="Readify"
    email="your.name@readify.net"
    emailHtml={
      <a
        href="mailto:your.name@readify.net"
      >
        your.name@readify.net
      </a>
    }
    isSupport={true}
    mobile="+61 111 222 333"
    mobileHtml={
      <a
        dangerouslySetInnerHTML={
          Object {
            "__html": "+61&nbsp;111&nbsp;222&nbsp;333",
          }
        }
        href="tel:+61111222333"
      />
    }
    name="your name"
    placeholders={
      Object {
        "email": "your.name@readify.net",
        "mobile": "+61 111 222 333",
        "name": "Your Name",
        "qualifications": "Jedi Master | PSM I",
        "title": "Job Title",
        "twitter": "@myTwitter",
      }
    }
    supportEmail={
      <span>
        | 
        <b>
          Support Email
        </b>
         
        <a
          href="mailto:support@readify.net"
        >
          support@readify.net
        </a>
        <br />
      </span>
    }
    supportMobile={
      <span>
        | 
        <b>
          Support Hotline
        </b>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&nbsp;1800&nbsp;READIFY",
            }
          }
        />
        <br />
      </span>
    }
    title="Job Title"
    twitter="@myTwitter"
    twitterHtml={
      <span>
        <b>
          T
        </b>
         
        <a
          href="https://twitter.com/myTwitter"
          rel="noopener noreferrer"
          target="_blank"
        >
          @myTwitter
        </a>
           
      </span>
    }
  />
  <div
    className="level"
  >
    <div
      className="level-left"
    >
      <h3
        className="level-item"
      >
        Replies and Forwards Signature
      </h3>
    </div>
    <div
      className="level-right"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Copy text only
      </button>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Copy Signature
      </button>
    </div>
  </div>
  <RepliesAndForwards
    brandLink="https://readify.net"
    brandLinkName="readify.net"
    brandLogo={
      Object {
        "alt": "Readify a Telstra Company",
        "link": "https://readifysignatures.blob.core.windows.net/images/image001.png",
      }
    }
    brandName="Readify"
    email="your.name@readify.net"
    emailHtml={
      <a
        href="mailto:your.name@readify.net"
      >
        your.name@readify.net
      </a>
    }
    isSupport={true}
    mobile="+61 111 222 333"
    mobileHtml={
      <a
        dangerouslySetInnerHTML={
          Object {
            "__html": "+61&nbsp;111&nbsp;222&nbsp;333",
          }
        }
        href="tel:+61111222333"
      />
    }
    name="your name"
    placeholders={
      Object {
        "email": "your.name@readify.net",
        "mobile": "+61 111 222 333",
        "name": "Your Name",
        "qualifications": "Jedi Master | PSM I",
        "title": "Job Title",
        "twitter": "@myTwitter",
      }
    }
    supportEmail={
      <span>
        | 
        <b>
          Support Email
        </b>
         
        <a
          href="mailto:support@readify.net"
        >
          support@readify.net
        </a>
        <br />
      </span>
    }
    supportMobile={
      <span>
        | 
        <b>
          Support Hotline
        </b>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&nbsp;1800&nbsp;READIFY",
            }
          }
        />
        <br />
      </span>
    }
    title="Job Title"
    twitter="@myTwitter"
    twitterHtml={
      <span>
        <b>
          T
        </b>
         
        <a
          href="https://twitter.com/myTwitter"
          rel="noopener noreferrer"
          target="_blank"
        >
          @myTwitter
        </a>
           
      </span>
    }
  />
</div>
`;
